--- a/content/w13.html
+++ b/content/w13.html
@@ -140,10 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Exam << <a href='Exam.html'>Previous</a> <a href='Final Project.html'>Next</a> >> Final Project<br /><h1>w13</h1>
-<p><a href="./../downloads/w12demo.txt">w12demo.txt</a></p>
-<p><a href="https://en.wikipedia.org/wiki/Flag_of_the_Republic_of_China#Construction_details">ROC 國旗規格</a>.</p>
-<p><a href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD%E5%9B%BD%E6%97%97#%E8%A7%84%E6%A0%BC">PROC 國旗規格</a> - 可以根據此規格定義, 新增 <button id="procflas">PROC flag</button> 按鈕.</p>
-<p><a href="https://en.wikipedia.org/wiki/Flag_of_the_United_States#Specifications">USA 國旗規格</a> - 可以根據此規格定義, 新增 <button id="usaflag">USA flag</button> 按鈕.</p>
+<p><a href="./../downloads/w12demo.txt"></a></p>
 <!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -271,8 +268,7 @@ random2_url = "https://gist.githubusercontent.com/kolas911205/d5e0361ab649052019
 random2 = button2(random2_url)
 doc["random2"].bind('click', random2.do)
 </script>
-</p>
-<br />Exam << <a href='Exam.html'>Previous</a> <a href='Final Project.html'>Next</a> >> Final Project</div>
+</p><br />Exam << <a href='Exam.html'>Previous</a> <a href='Final Project.html'>Next</a> >> Final Project</div>
         
     <!-- footer -->
       <div class="container">
